--- a/.ebextensions/nodejs-settings.config
+++ b/.ebextensions/nodejs-settings.config
@@ -1,3 +1,9 @@
 option_settings:
   aws:elasticbeanstalk:environment:proxy:
     ProxyServer: nginx
+commands:
+    setvars:
+        command: /opt/elasticbeanstalk/bin/get-config environment | jq -r 'to_entries | .[] | "export \(.key)=\"\(.value)\""' > /etc/profile.d/sh.local
+packages:
+    yum:
+        jq: []
