--- a/.ebextensions/nodejs-settings.config
+++ b/.ebextensions/nodejs-settings.config
@@ -1,9 +1,8 @@
-option_settings:
-  aws:elasticbeanstalk:environment:proxy:
-    ProxyServer: nginx
-commands:
-    setvars:
-        command: /opt/elasticbeanstalk/bin/get-config environment | jq -r 'to_entries | .[] | "export \(.key)=\"\(.value)\""' > /etc/profile.d/sh.local
-packages:
-    yum:
-        jq: []
+files:
+  "/opt/elasticbeanstalk/tasks/bundlelogs.d/01-sample-app.conf":
+    content: |
+      /tmp/sample-app*
+
+  "/opt/elasticbeanstalk/tasks/taillogs.d/01-sample-app.conf":
+    content: |
+      /tmp/sample-app.log
