--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "deploy": "npm run build && npm run start"
+    "start": "node index.js"
   },
   "keywords": [
     "server"
@@ -13,14 +12,11 @@
   "author": "Hiep Le",
   "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.3",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "postgres": "^3.4.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
